# rinha-backend

./: .gitignore  Dockerfile  docker-compose.yml  mongo-init.js  nginx.conf  pyproject.toml
src/: __init__.py  config.py  erros.py  logit.py  main.py
src/clientes/: __init__.py  acoes.py  esquemas.py  rotas.py
src/db/: __init__.py
tests/: __init__.py  test_copo_transacao.py  test_transacao.py
